--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
+  "watch": {
+      "dev": "./srcs/*.ts"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "dev": "ts-node-dev --respawn --transpile-only --watch ./test/HelloWorld.ts ./srcs/index.ts",
+      "build": "npx hardhat compile && tsc -p tsconfig.json",
+      "deploy": "npx hardhat deploy"
   },
   "keywords": [],
   "author": "",
