--- a/Dockerfile.deploy
+++ b/Dockerfile.deploy
@@ -1,12 +1,13 @@
-FROM node:24-bullseye
+FROM node:24-alpine
 
 WORKDIR /usr/src/app
 
-RUN apk update --no-cache
+RUN apk update --no-cache && \ 
+    apk add pnpm
 
 COPY ./ /usr/src/app/
 
-RUN npm i --omit-dev
+RUN npm i --prod
 
 RUN chmod +x deploy.sh 
 
