--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "tokenizer",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
-  "watch": {
-      "dev": "./srcs/*.ts"
-  },
   "scripts": {
-      "dev": "ts-node-dev --respawn --transpile-only --watch ./test/HelloWorld.ts ./srcs/index.ts",
-      "build": "npx hardhat compile && tsc -p tsconfig.json",
-      "deploy": "npx hardhat deploy"
+    "test": "npx hardhat test",
+    "compile": "npx hardhat compile",
+    "deploy": "npx hardhat ignition deploy ./ignition/modules/MameCoin.ts",
+    "dev": "npx hardhat node",
+    "deploy:local": "npx hardhat ignition deploy ./ignition/modules/Lock.ts --network localhost"
   },
   "keywords": [],
   "author": "",
@@ -36,5 +34,8 @@
     "ts-node": ">=8.0.0",
     "typechain": "^8.3.0",
     "typescript": ">=4.5.0"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.3.0"
   }
 }
