--- a/docker-compose.deploy copy.yml
+++ b/docker-compose.deploy copy.yml
@@ -4,16 +4,13 @@ services:
   smart-contract-service:
     container_name: smart-contract-service
     restart: on-failure
-    volumes:
-      - ./deployment/test:/usr/src/app/test
-      - ./code:/usr/src/app/code
     environment:
       SIGNER_PRIVATE_KEY: ${SIGNER_PRIVATE_KEY:?}
       FUJI_CHAIN_ID: ${FUJI_CHAIN_ID:?}
       FUJI_RPC_URL: ${FUJI_RPC_URL:?}
     build:
         context: ./
-        dockerfile: ./deployment/Dockerfile.dev
+        dockerfile: ./deployment/Dockerfile.deploy
     expose:
       - 3000
     ports:
