--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 SIGNER_PRIVATE_KEY=<string>
 FUJI_CHAIN_ID=43113
-FUJI_RPC_URL="https://api.avax-test.network/ext/bc/C/rpc"
+FUJI_RPC_URL=https://api.avax-test.network/ext/bc/C/rpc
