--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,7 +3,7 @@ name: tokenizer
 services:
   smart-contract-service:
     container_name: smart-contract-service
-    restart: on-failure
+    # restart: on-failure
     volumes:
       - ./deployment/test:/usr/src/app/test
       - ./code:/usr/src/app/code
