--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -5,7 +5,7 @@ services:
     container_name: smart-contract-service
     restart: on-failure
     volumes:
-      - ./deployment/contractData/:/usr/src/app/contractData
+      - ./deployment/test:/usr/src/app/test
     environment:
       SIGNER_PRIVATE_KEY: ${SIGNER_PRIVATE_KEY:?}
       FUJI_CHAIN_ID: ${FUJI_CHAIN_ID:?}
