--- a/deployment/package.json
+++ b/deployment/package.json
@@ -34,9 +34,7 @@
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
     "typechain": "^8.3.0",
-    "typescript": ">=4.5.0"
-  },
-  "dependencies": {
+    "typescript": ">=4.5.0",
     "@openzeppelin/contracts": "^5.3.0"
   }
 }
